# debian-workstation

./: .gitignore  README.md  bootstrap.sh  init.sh  install.sh  preseed.cfg  pyproject.toml  requirements.yml  workstation.yml
roles/workstation/defaults/: main.yml
roles/workstation/handlers/: main.yml
roles/workstation/tasks/: laptop.yml  main.yml  packages.yml  repositories.yml
