[tool.poetry]
name = "debian-workstation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^9.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
